# SlideShowOpenGL

./: .cproject  .gitattributes  .project  CMakeLists.txt  README.md
data/: Calendar_AHD_IPP_RG.pgm  Nat.pgm  in_theatre.pgm  kodim19_RG_Gray_512x767.pgm  Безимени-1.pgm  Безимени-2.pgm
src/: CMakeLists.txt  GLSlideShow.cpp  GLSlideShow.h  SlideShowOpenGL.cpp  initCUDA.cu  initCUDA.h
